<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/colorFondo"
        tools:context=".MainActivity">


    <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:src="@drawable/colegio"
            android:visibility="invisible" />

    <!--   <TextView
              android:layout_marginTop="24dp"
              android:textSize="18dp"
              android:text="@string/here_text"
              android:id="@+id/textView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>  -->

      <EditText
              android:id="@+id/editText"
              android:hint="@string/add_text"
              android:textColorHint="@color/colorAccent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:layout_marginHorizontal="24dp"
              android:inputType="text"
              android:drawableLeft="@drawable/boy"
              android:drawablePadding="12dp"
      />

      <EditText
              android:id="@+id/editText1_2"
              android:hint="@string/apelli"
              android:textColorHint="@color/colorAccent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:layout_marginHorizontal="24dp"
              android:inputType="text"
              android:drawableLeft="@drawable/boy"
              android:drawablePadding="12dp"
      />

      <EditText
              android:id="@+id/editText2"
              android:hint="@string/phone"
              android:textColorHint="@color/colorAccent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:maxLength="10"
              android:layout_marginHorizontal="24dp"
              android:inputType="phone"
              android:drawableLeft="@drawable/phone"
              android:drawablePadding="12dp"
      />

      <EditText
              android:id="@+id/editText2_2"
              android:hint="@string/correo"
              android:textColorHint="@color/colorAccent"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="24dp"
              android:maxLength="10"
              android:layout_marginHorizontal="24dp"
              android:inputType="textEmailAddress"
              android:drawableLeft="@drawable/correo"
              android:drawablePadding="12dp"
      />

  <Button
          android:id="@+id/btnAccept"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="48dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="8dp"
          android:background="@color/mexicanPink"
          android:text="@string/accept_button"
          android:onClick="showImageIfValid" />

  </LinearLayout>